# khisbagis

./: .replit  README.md  pyproject.toml
artifacts/khisba-gis/: main.py  requirements.txt
