[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.7.35",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "protobuf>=7.35.1",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
]
